--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta charset="UTF-8">
     <title>WFS</title>
     <link rel="stylesheet" href="https://openlayers.org/en/v4.1.1/css/ol.css" type="text/css">
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
@@ -55,31 +56,30 @@
 
   <body>
     <div id="map" class="map"></div>
+    <form>
+    <label>altitude size</label>
+      <input id="altitude" type="range" min="1" max="50" step="1" value="15"/>
+    </form>
     <script>
+    var altitude = document.getElementById('altitude');
     var raster = new ol.layer.Tile({
       source: new ol.source.OSM()
     });
 
     var vector = new ol.layer.Vector({
-      source: new ol.source.Vector({
-        format: new ol.format.GeoJSON(),
-        url: function(extent) {
-          return 'http://localhost:8080/geoserver/municipios/ows?'+
-          'service=WFS&'+
-          'version=1.0.0&request=GetFeature&typeName=municipios:terrenos&'+
-          'outputFormat=application/json&srsname=EPSG:4326&'+
-          'bbox='+extent.join(',')+',EPSG:4326';
-        },
-        strategy: ol.loadingstrategy.bbox
-      })
-    });
+       source: new ol.source.Vector({
+         format: new ol.format.KML(),
+         url: 'terrenos.kml'
+       }),
+       altitude: parseInt(altitude.value)
+     });
 
       var map = new ol.Map({
         layers: [raster, vector],
         target: document.getElementById('map'),
         view: new ol.View({
           projection: 'EPSG:4326',
-          center: [-74.083333, 4.600000],
+          center: [-74.40779967, 5.29334365],
           maxZoom: 19,
           zoom: 12
         })
