--- a/index.html
+++ b/index.html
@@ -14,17 +14,65 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <style>
-    .popover-content {
-      min-width: 180px;
-    }
+  .ol-popup {
+          position: absolute;
+          background-color: white;
+          -webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
+          filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
+          padding: 15px;
+          border-radius: 10px;
+          border: 1px solid #cccccc;
+          bottom: 12px;
+          left: -50px;
+          min-width: 280px;
+        }
+        .ol-popup:after, .ol-popup:before {
+          top: 100%;
+          border: solid transparent;
+          content: " ";
+          height: 0;
+          width: 0;
+          position: absolute;
+          pointer-events: none;
+        }
+        .ol-popup:after {
+          border-top-color: white;
+          border-width: 10px;
+          left: 48px;
+          margin-left: -10px;
+        }
+        .ol-popup:before {
+          border-top-color: #cccccc;
+          border-width: 11px;
+          left: 48px;
+          margin-left: -11px;
+        }
+        .ol-popup-closer {
+          text-decoration: none;
+          position: absolute;
+          top: 2px;
+          right: 8px;
+        }
+        .ol-popup-closer:after {
+          content: "✖";
+        }
   </style>
 </head>
 
 <body>
   <div style="width:80%; height:80%" id="map" class="map"></div>
-  <div id="popup" class="ol-popup"> </div>
-
+  <div id="popup" class="ol-popup">
+      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+      <div id="popup-content"></div>
+    </div>
   <script>
+  /**
+   * Elements that make up the popup.
+   */
+      var container = document.getElementById('popup');
+        var content = document.getElementById('popup-content');
+        var closer = document.getElementById('popup-closer');
+
     /*Layer Mapa*/
     var raster = new ol.layer.Tile({
       source: new ol.source.OSM()
@@ -37,9 +85,10 @@
         format: new ol.format.GeoJSON(),
         url: 'wfs.json',
         strategy: ol.loadingstrategy.bbox
-
-      })
+      }),
+      blur: parseInt(blur.value, 10)
     });
+
     /*Layer Coordenadas kml
     var vector = new ol.layer.Vector({
       source: new ol.source.Vector({
@@ -67,9 +116,23 @@
 
     // Popup showing the position the user clicked
     var popup = new ol.Overlay({
-      element: document.getElementById('popup')
+      element: container,
+        autoPan: true,
+        autoPanAnimation: {
+          duration: 250
+        }
     });
     map.addOverlay(popup);
+
+        /**
+       * Add a click handler to hide the popup.
+       * @return {boolean} Don't follow the href.
+       */
+      closer.onclick = function() {
+          popup.setPosition(undefined);
+          closer.blur();
+          return false;
+        };
 
     /******************************* Popup para mostrar datos de kml
     map.on('click', function(evt) {
@@ -116,9 +179,7 @@
     *************************************************************************************/
 
     // display popup on click GEoJSON
-    //var element = document.getElementById('popup');
     map.on('click', function(evt) {
-      var element = popup.getElement();
       var features = [];
       var pixel = map.getEventPixel(evt.originalEvent);
       if (evt.dragging) {
@@ -136,24 +197,19 @@
             var coord = geometry.getCoordinates();
             var temp = new Array();
             temp = String(coord).split(',');
+            var altura =parseFloat(temp[2]);
+
           }
+
         }else {
           return null;
         }
 
-
-      $(element).popover('destroy');
+      content.innerHTML = '<p><b>Ubicación:</b> '+nombre+'</p> <p><b>Coordenadas:</b> ' + coord + '</p> <b>Altura: </b>'+altura
       popup.setPosition(coord);
-      // the keys are quoted to prevent renaming in ADVANCED mode.
-      $(element).popover({
-        'placement': 'top',
-        'animation': false,
-        'html': true,
-        'content': ('<p><b>Ubicación:</b> '+nombre+'</p> <p><b>Coordenadas:</b> ' + coord + '</p> <b>Altura: </b>'+temp[2])
-      });
-      $(element).popover('show');
 
     });
+
   </script>
 </body>
 
