--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
       }),
       style: new ol.style.Style({
         image: new ol.style.Circle({
-          radius: 2,
+          radius: 6,
           fill: new ol.style.Fill({
             color: 'red'
           }),
           stroke: new ol.style.Stroke({
-            color: 'black'
+            color: 'black',
+            width: 3/2
           })
         })
       })
